# OptArena

./: .clang-format  .clang-tidy  .dockerignore  .fprettify.rc  .gitignore  .gitmodules  .pre-commit-config.yaml  .yapfignore  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  MANIFEST.in  NOTICE  README.md  benchmarks.md  frameworks.md  plot_grid.py  plot_lines.py  plot_results.py  plot_roofline.py  pyproject.toml  quickstart.py  requirements.txt  run_benchmark.py  run_framework.py  run_sparse_benchmark.py  setup.py
adapters/hpcagent_bench/: README.md  adapter_metadata.json  pyproject.toml  run_adapter.py
adapters/optarena/: README.md  adapter_metadata.json  optarena.yaml  pyproject.toml  run_adapter.py
containers/: LIBRARIES.md  agentbench.compose.yml  amd.Dockerfile  amd.def  build-hptt.sh  cpu.Dockerfile  cpu.def  hpcagent_bench.Dockerfile  judge.def  nvidia.Dockerfile  nvidia.def  optarena.Dockerfile  pluto.Dockerfile
docs/: AGENTS_AND_TOOL_ACCESS.md  ARCHIVED_COMPONENTS.md  BACKLOG.md  BACKLOG_kernelbench_translator.md  CONTRIBUTING.md  DACE_SDFG_FAILURES.md  DESIGN_cost_and_baseline.md  DESIGN_hf_dataset_and_harbor.md  DESIGN_input_configs_and_fuzzing.md  DESIGN_microapp_config_fuzzing.md  DESIGN_perf_protocol_configs_shapes.md  LAUNCH.md  PROMPTS.md  (+16 more)
optarena/numpy_translators/: CONTRIBUTOR_GUIDE.md  README.md  pyproject.toml
optarena/numpy_translators/src/numpyto_c/: bindings.py  cli.py  dace_emit.py  emit.py  frontend.py  ir.py  lib_nodes.py  lowering.py  sparse_emit.py
optarena/numpy_translators/src/numpyto_common/: __init__.py  cli.py  dtypes.py  emit_io.py  emitter.py  frontend.py  ir.py  lib_nodes.py  lowering.py  naming.py  numpy_desugar.py  operators.py  parallelism.py  sanitize.py  sparse_emit.py  testing.py
optarena/numpy_translators/src/numpyto_common/sanitize/: __init__.py  comments.py  mangle.py
optarena/numpy_translators/src/numpyto_cupy/: README.md  __init__.py  cli.py  emit.py
optarena/numpy_translators/src/numpyto_fortran/: README.md  __init__.py  cli.py  emit.py
optarena/numpy_translators/src/numpyto_jax/: README.md  __init__.py  core.py
optarena/numpy_translators/src/numpyto_numba/: README.md  __init__.py  cli.py
optarena/numpy_translators/src/numpyto_pythran/: README.md  __init__.py  cli.py  emit.py
optarena/numpy_translators/tests/: _bench_yaml.py  _native_tu.py  _op_oracle.py  conftest.py  sparse_oracle.py  test_abi_param_order.py  test_argmax_newaxis_cast.py  test_array_return_helpers.py  test_axis_reductions.py  test_bitonic_sort_native.py  test_chained_subscript_and_config_lowering.py  test_cli_driver.py  test_complex_real_imag.py  test_compound_assign_and_floordiv.py  test_contraction_indexing_ops.py  test_dace_emit.py  test_deep_audit_fixes.py  test_division_helpers.py  test_eigvalsh_desugar.py  test_einsum_ellipsis.py  test_elemental_binary_ufuncs.py  test_extended_reductions.py  test_eye_identity.py  test_fancy_scatter_gather.py  test_gelu.py  test_helper_functions.py  test_hmm_forward_native.py  test_init_dtype_mapping.py  test_int_cast_truncation.py  test_jax_inplace_helpers.py  test_jax_semantics_fixes.py  test_kmp_native.py  test_len_builtin.py  test_libnode_emit_ops_gaps.py  test_linalg_lowerings.py  test_lowering_invariants.py  test_materialize_argmax_swap.py  test_microapps.py  test_ml_numpy_gaps.py  test_module_const_bitops.py  (+34 more)
(+4540 files in other folders)
